src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__issue_wizard__issue_wizard_ai_review_loading_uses_braille_spinner.snap
---
source: src/tui/snapshot_tests/issue_wizard.rs
expression: terminal.backend()
---
"╔═══════════════════════════════════════════════[ Step 6/10: AI Review ]═══════════════════════════════════════════════╗"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"┌AI Review  (r: revise, s: skip, i: improve with AI, Enter: continue, R: retry on error)───────────────────────────────┐"
"│                                                                                                                      │"
"│                                             ⠸ AI is reviewing your issue…                                            │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                             [Enter] next   [Tab] cycle   [Shift+Enter] newline   [Esc] back                            "
"                                                                                                                        "
