src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__issue_wizard__issue_wizard_type_select_uses_wizard_frame.snap
---
source: src/tui/snapshot_tests/issue_wizard.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════[ Step 2/10: Type Select ]══════════════════════════════════════════════╗"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                              ╔════════[ Feature ]═════════╗╔══════════[ Bug ]═══════════╗                              "
"                              ║                            ║║                            ║                              "
"                              ║           Feature          ║║             Bug            ║                              "
"                              ║                            ║║                            ║                              "
"                              ║                            ║║                            ║                              "
"                              ║                            ║║                            ║                              "
"                              ╚════════════════════════════╝╚════════════════════════════╝                              "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                               [←/→ h/l] choose Feature or Bug   [Enter] next   [Esc] back                              "
"                                                                                                                        "
